# skyengine

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  start.py
.claude/: settings.local.json
application/backend/: server.py
application/frontend/: README.md  package-lock.json  package.json
backend/: backend_core.py  backend_server.py  main.py
backend/environment/: grid_core.py  packet_core.py
backend/server/: grid_server.py  packet_server.py
backend/service/: agent_service.py  file_service.py  monitor_service.py
config/: __init__.py  _config.yaml  all_field_const.py  application_config.yaml  factory_graph_application_config.yaml  grid_factory.json  pipeline_config_set_config.yaml  template_config_set2_config.yaml  template_config_set_config.yaml  test_config_sky_config.yaml  test_config_wuhao_config.yaml
config/config_set/: event_config.yaml  map_config.yaml
config/map_config_collection/: __init__.py
config/pf_examples/: __init__.py  sample.yaml  template.yaml
config/template_config_set/: event_config.yaml
dataset/: __init__.py  hf_downloader.py
dataset/convert/: convert_job.py
dockerfiles/: SkyEngine.yaml  application.yaml  backend.dockerfile  frontend.dockerfile
docs/: PPT_DRAFT.md  PPT_DRAFT_UPDATE.md  PacketFactory.md  QUICKSTART.md  component_design.md  event_design.md  event_generator_usage.md  eventqueue_integration_usage.md  generate_ppt.js  grid_factory_usage.md  infer_train.md  lifecycle_design.md  package-lock.json  status.iodraw  天工平台演示.pptx
docs/grid_factory/: QUICKSTART.md  design.md
docs/private_docs/: note0921.md  note1008.md  note1016.md  pogema_toolbox_guide.md
docs/quick_start/: README.md
executor/grid_factory/: __init__.py
frontend/: index.html  package.json
frontend/docs/: case.md
sky_dag_rl/: README.md  try_env.py
sky_dag_rl/test/: test_env_v0.py
sky_logs/: logger.py
sky_logs/cache/: cache.db  cache.db-shm  cache.db-wal
sky_simulator/: bootstrap.py
sky_simulator/call_back/: lifecycle_hooks.py  (+1 more)
test/: test_bootstrap.py  test_env_template.py  test_env_v0.py  test_greedy.py  test_grid_factory_env.py  test_load.py  test_load_config.py  try_vis.py
tiangong_logs/: dc_helper.py  logger.py
(+324 files in other folders)
