[project]
name = "skyengine"
version = "0.1.0"
description = "天工的配置文件表"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "fastapi>=0.125.0",
    "gymnasium>=0.28.1",
    "matplotlib==3.8.3",
    "opencv-python>=4.8.1.78",
    "pettingzoo>=1.24.3",
    "pygame>=2.6.1",
    "pygame-gui>=0.6.14",
    "python-multipart>=0.0.22",
    "pyyaml==6.0.1",
    "uvicorn>=0.40.0",
    # 新增依赖
    "toolz==1.0.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tornado==6.5.2",
    "huggingface-hub==0.35.3",
    "pogema-toolbox==0.1.0",
    "pogema==1.3.1",
    "ortools>=9.8",
    "cppimport>=22.8.2",
]

[tool.uv]
override-dependencies = ["pydantic>=1.10.13,<2.0.0"]
# 针对 CUDA 特殊版本的索引配置
[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }
